force-app/main/default/objects/SC_Section__c/SC_Section__c.object-meta.xml
<CustomObject>
    <label>SC Section</label>
    <nameField>
        <displayFormat>SEC-{0000}</displayFormat>
        <label>SC Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>