force-app/main/default/objects/SC_Section__c/fields/Additional_Number_Of_Living_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Number_Of_Living_Rooms__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Number Of Living Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>