force-app/main/default/objects/SC_Section__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to Migrate Data...need not to be displayed on any page layout...</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>