force-app/main/default/objects/SC_Section__c/fields/Opportunity_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Status__c</fullName>
    <label>Opportunity Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IQ Follow Up - Unable To Contact</fullName>
            </value>
            <value>
                <fullName>IQ Follow Up - Follow Up Later</fullName>
            </value>
            <value>
                <fullName>IQ Follow Up - Property on Hold</fullName>
            </value>
            <value>
                <fullName>Customer Needs More Time</fullName>
            </value>
            <value>
                <fullName>Customer Not Free To Talk</fullName>
            </value>
            <value>
                <fullName>Site Measurement Proposed</fullName>
            </value>
            <value>
                <fullName>Site Measurement Meeting Confirmed</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Reviewed by Buddy</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Sent</fullName>
            </value>
            <value>
                <fullName>Design Presentation Proposed</fullName>
            </value>
            <value>
                <fullName>Design Presentation Confirmed</fullName>
            </value>
            <value>
                <fullName>Design Presentation Completed</fullName>
            </value>
            <value>
                <fullName>Production Drawings &amp; Quote Review Complete</fullName>
            </value>
            <value>
                <fullName>Production Drawings Sent</fullName>
            </value>
            <value>
                <fullName>Project Kick-off Proposed</fullName>
            </value>
            <value>
                <fullName>Project Kick-off Meeting Confirmed</fullName>
            </value>
            <value>
                <fullName>Project Kick-off Completed</fullName>
            </value>
            <value>
                <fullName>Drawings &amp; Quote Approved</fullName>
            </value>
            <value>
                <fullName>Production Folder shared with factory for Review</fullName>
            </value>
            <value>
                <fullName>Drawings approved by factory</fullName>
            </value>
            <value>
                <fullName>Final Drawings, Quote &amp; Works Contract Sent</fullName>
            </value>
            <value>
                <fullName>Final Drawings, Quote &amp; Works Contract Approved</fullName>
            </value>
            <value>
                <fullName>40% payment collected</fullName>
            </value>
            <value>
                <fullName>Project sent to production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>