force-app/main/default/objects/SC_Section__c/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Section</label>
    <referenceTo>SC_Section__c</referenceTo>
    <relationshipLabel>SC Sections</relationshipLabel>
    <relationshipName>SC_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>