force-app/main/default/objects/SC_Section__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Record Type D1</fullName>
            </value>
            <value>
                <fullName>Record Type D2</fullName>
            </value>
            <value>
                <fullName>Record Type D3</fullName>
            </value>
            <value>
                <fullName>Record Type D4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>