force-app/main/default/objects/SC_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Sub_Status__c</columns>
    <columns>Parent_Section__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>